# aeef-quickstart

./: LICENSE  README.md  STANDARDS-MAP.md
shared/: .gitignore.append  .pre-commit-config.yaml
shared/.github/: pull_request_template.md
shared/.semgrep/: ai-deprecated-crypto.yaml  ai-hallucinated-crypto.yaml  ai-sql-injection.yaml
shared/docs/adaptation/: mcp-a2a-adaptation.md
shared/docs/decisions/: 000-use-aeef-standards.md
shared/policies/: acceptable-use-policy-startup.md  data-classification-quick-ref.md
shared/schemas/: ai-provenance.schema.json  gate-decision.schema.json  hook-contract.schema.json  run-ledger-entry.schema.json
stacks/go/: .cursorrules  .golangci.yml  CLAUDE.md  go.mod  go.sum
stacks/go/.github/workflows/: ai-quality-gates.yml
stacks/go/cmd/server/: main.go
stacks/go/internal/health/: handler.go  handler_test.go
stacks/go/internal/middleware/: rate_limiter.go  rate_limiter_test.go
stacks/go/scripts/: setup.sh
stacks/python/: .cursorrules  CLAUDE.md  pyproject.toml
stacks/python/.github/workflows/: ai-quality-gates.yml
stacks/python/app/: main.py
stacks/python/app/middleware/: rate_limiter.py
stacks/python/app/tests/: test_main.py  test_rate_limiter.py
stacks/python/scripts/: setup.sh
stacks/typescript/: .cursorrules  CLAUDE.md  package.json
stacks/typescript/.github/workflows/: ai-quality-gates.yml
stacks/typescript/scripts/: setup.sh
stacks/typescript/src/: health.test.ts  index.ts
stacks/typescript/src/middleware/: rate-limiter.test.ts  rate-limiter.ts
